--- a/docs/Hardware/ArduinoTutorial/Part-3 Sensors you should know/08.Motor Control!A great step to a small goal!.md
+++ b/docs/Hardware/ArduinoTutorial/Part-3 Sensors you should know/08.Motor Control!A great step to a small goal!.md
@@ -86,15 +86,17 @@ void loop() {
   analogWrite(speed, 70);
 }
 ```  
-## 3.TB6612
-### 3.1 Pins
+## 3.TB6612  
+### 3.1 Pins  
+
 <img src="pics/demoPics/8-6TB6612Pin.png" width="200%">  
   
 ### 3.2 Wiring Diagram  
 <img src="pics/demoPics/8-5TB6612.jpg">  
   
-### 3.3 Example Code
-```C++
+### 3.3 Example Code  
+
+```cpp
 //motor A connected between A01 and A02
 //motor B connected between B01 and B02
  
