--- a/docs/Hardware/ArduinoTutorial/03.md
+++ b/docs/Hardware/ArduinoTutorial/03.md
@@ -30,7 +30,7 @@ If so,download and install it!
 
 For
 
-- Windows : Click [Here](tools/CH34x_Install_Windows_v3_4.EXE)(CH34x_Install_Windows_v3_4.EXE)
+- Windows : Click [Here](https://redmine.laas.fr/attachments/download/1257/CH34x_Install_Windows_v3_4.zip)(CH34x_Install_Windows_v3_4.EXE)
 - Linux/macOS : Congratuation! it's Superfluous!
 
 ## 2.Lighting your first LED!
