--- a/docs/papers/SLAM/Frustum.mdx
+++ b/docs/papers/SLAM/Frustum.mdx
@@ -1,3 +1,3 @@
 import PdfViewer from '@site/src/components/PdfViewer';
 
-<PdfViewer url='https://backend.vistalab.top/files/papers/slam/Frustum.pdf' />
+<PdfViewer pdfUrl='https://backend.vistalab.top/files/papers/slam/Frustum.pdf' />
