--- a/blog/2023-10-27.md
+++ b/blog/2023-10-27.md
@@ -12,7 +12,7 @@ tags: [think, lifetime]
 
 **“我的这些投入真的算不了什么，很多人头发比我白得多。我只是通过媒体的宣传，（民众）好像感受到的我的工作经历，实际上呢更多人承受比我压力更大，他们呢比我更辛苦，而且付出得更多、贡献得更多。”**
 
-吴先生真正让人看到怎样的人才是中国的脊梁。
+吴先生真正让人看到怎样的人才是脊梁。
 
 **战争**  
 这两天世界各地的战乱频发，中国也在进行着贸易战、科技战与金融战。实际上了解了世界各地大量的政治、人文、经济，反而越发觉得自身所处的国家、时代非常符合自己。  
