--- a/docs/diaries/2023-11/2023-11.md
+++ b/docs/diaries/2023-11/2023-11.md
@@ -1,5 +1,19 @@
 # 🥲2023-11-01
+
 今天上午呢去了图书馆，没带充电器，浪费一上午；下午开始先跟深信服的Hr学长交流，稍有收获，后面直到晚上就是忙忙忙，晚上讲课，讲《实验室是怎样连接的》。9点多熊金童请吃饭，他的心态可以说是不错的了。
 
 # 😟2023-11-02
+
 emmm居然是摆烂的一天，没有力气，还点了顿KFC，睡了一下午，罪过罪过。
+
+# 😟2023-11-03
+
+5号补的。
+
+# 😟2023-11-04
+
+5号补的。
+
+# 😟2023-11-05
+
+5号了wco？？？希望明天能好。
